--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start": "gulp"
   },
   "dependencies": {
-    "date-format": "1.1.0",
     "fs-extra": "4.0.0",
+    "moment": "2.18.1",
     "request": "2.81.0",
-    "request-promise": "4.2.1"
+    "request-promise": "4.2.1",
+    "winston": "2.3.1"
   },
   "devDependencies": {
     "request-debug": "^0.2.0"
