--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "fs-extra": "4.0.0",
+    "lodash": "4.17.4",
     "moment": "2.18.1",
     "request": "2.81.0",
     "request-promise": "4.2.1",
     "winston": "2.3.1"
   },
   "devDependencies": {
+    "mocha": "^3.4.2",
     "request-debug": "^0.2.0"
   }
 }
